--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "private": true,
   "husky": {
     "hooks": {
-      "pre-commit": "pretty-quick --staged"
+      "pre-commit": "pretty-quick --staged && ng lint", 
+      "pre-push": "ng build --aot true"
     }
   },
   "dependencies": {
