--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "husky": {
     "hooks": {
       "pre-commit": "pretty-quick --staged && ng lint", 
-      "pre-push": "ng build --aot true"
+      "pre-push": "ng build --aot true --no-verify"
     }
   },
   "dependencies": {
