--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "private": true,
   "husky": {
     "hooks": {
-      "pre-commit": "pretty-quick --staged && ng lint", 
-      "pre-push": "ng build --aot true --no-verify"
+      "pre-commit": "pretty-quick --staged && ng lint"
     }
   },
   "dependencies": {
