husky hooks changed in order not to lint in every commit

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "private": true,
   "husky": {
     "hooks": {
-      "pre-commit": "pretty-quick --staged && ng lint"
+      "pre-commit": "pretty-quick --staged",
+      "pre-push": "ng lint"
     }
   },
   "dependencies": {
