--- a/.prettierrc
+++ b/.prettierrc
@@ -3,6 +3,7 @@
     "semi": true,
     "singleQuote": true,
     "trailingComma": "es5",
-    "printWidth": 80,
-    "useTabs": true
+    "useTabs": true,
+    "tabWidth": 4,
+    "printWidth": 80
 }
