--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "private": true,
   "husky": {
     "hooks": {
-      "pre-commit": "pretty-quick --staged",
+      "pre-commit": "pretty-quick --staged && ng test --watch=false",
       "pre-push": "ng lint"
     }
   },
