--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "private": true,
   "husky": {
     "hooks": {
-      "pre-commit": "pretty-quick --staged && ng test --watch=false",
-      "pre-push": "ng lint && ng build"
+      "pre-commit": "pretty-quick --staged",
+      "pre-push": "ng lint && ng build && ng test --watch=false"
     }
   },
   "dependencies": {
