syntax bug fixed in gitlab-ci.yml file

--- a/gitlab-ci.yml
+++ b/gitlab-ci.yml
@@ -1,12 +1,12 @@
+before_script:
+    - npm install
+
 linting:
     script:
-        - npm install
         - npm run lint
 testing:
     script:
-        - npm install
         - npm run test
 build:
     script:
-        - npm install
         - npm run build:prod
