--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ linting:
         - npm run lint
 testing:
     script:
-        - npm run test
+        - npm run testWatchFalse
 build:
     script:
         - npm run build:prod
