--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
+    "testWatchFalse": "ng test --watch=false",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "pretty-quick": "pretty-quick"
