--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/jquery": "^3.3.31",
     "file-loader": "^5.0.2",
     "leaflet": "^1.6.0",
+    "leaflet-search": "^2.9.8",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "url-loader": "^3.0.0",
