added a new dependency on angular.json (ghpages)

--- a/angular.json
+++ b/angular.json
@@ -119,6 +119,10 @@
 							"devServerTarget": "poke-angular:serve:production"
 						}
 					}
+				},
+				"deploy": {
+					"builder": "angular-cli-ghpages:deploy",
+					"options": {}
 				}
 			}
 		}
